[project]
name = "lucenaut-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.73.0",
]


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cli = "lucenaut_cli:main"
